--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <body>
     <h1>Blackjack</h1>
     <p id="message-el">Want to play a round?</p>
-    <p>Cards</p>
-    <p>Sum</p>
+    <p id="cards-el">Cards</p>
+    <p id="sum-el">Sum</p>
     <!-- Create a button that says Start Game Make it call a startGame() function when is clicked-->
     <button onclick="startGame()">Start Game</button>
+    <button onclick="newCard()">New Card</button>
   </body>
   <script src="script.js"></script>
 </html>
