App finalized with Js and CSS

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   </head>
   <link rel="stylesheet" href="style.css" />
   <body>
-    <h1>Blackjack</h1>
-    <p id="message-el">Want to play a round?</p>
-    <p id="cards-el">Cards</p>
-    <p id="sum-el">Sum</p>
-    <!-- Create a button that says Start Game Make it call a startGame() function when is clicked-->
-    <button onclick="startGame()">Start Game</button>
-    <button onclick="newCard()">New Card</button>
+    <div class="app-wrapper">
+      <h1>Blackjack</h1>
+      <p id="message-el">Want to play a round?</p>
+      <p id="cards-el">Cards</p>
+      <p id="sum-el">Sum</p>
+      <!-- Create a button that says Start Game Make it call a startGame() function when is clicked-->
+      <button onclick="startGame()">Start Game</button>
+      <button onclick="newCard()">New Card</button>
+      <p id="player-el">Per: €145</p>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
