netlify link added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         This project was coded by
         <a href="https://linktr.ee/andiekay">Andreia Fernandes</a> and is
         open-sourced on <a href="https://github.com/andie7">GitHub</a> and
-        hosted on <a href="">Netlify</a>
+        hosted on
+        <a href="https://sparkly-druid-ef8fe9.netlify.app/">Netlify</a>
       </small>
     </div>
   </body>
