--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="small-wrapper">
       <small>
         This project was coded by
-        <a href="https://linktr.ee/andiekay">Andreia Fernandes</a> and is
-        open-sourced on <a href="https://github.com/andie7">GitHub</a> and
+        <a href="https://linktr.ee/andiekay">Andreia Fernandes</a> and 
         hosted on
         <a href="https://sparkly-druid-ef8fe9.netlify.app/">Netlify</a>
       </small>
